fixed overlap

--- a/cal.css
+++ b/cal.css
@@ -250,3 +250,13 @@ select {
     font-size: 15px;
     padding: 10px;
 }
+
+#moremarg {
+    margin-top: 20px;
+    background: #2ebdff;
+    color: white;
+    font-family: 'Nunito', sans-serif;
+    padding: 20px;
+    letter-spacing: 2px;
+    text-align: center;
+}
